src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Tooltip */
.tooltip-container {
  position: relative;
}
.tooltip-box {
  position: absolute;
  z-index: 100;
  background: rgba(0, 0, 0, 0.7);
  color: #fff;
  padding: 5px;
  border-radius: 5px;
  top: calc(100% + 10px);
  left: 50%;
  transform: translateX(-50%);
  display: block;
  width: max-content;
  visibility: hidden;
  opacity: 0;
  transition: opacity 150ms ease-in-out, visibility 150ms ease-in-out;
  pointer-events: none;
}
.tooltip-box.visible {
  display: block;
  visibility: visible;
  opacity: 100;
}

/* Edit text */
.edit-text-input {
  width: 90px;
  padding-left: 0.5rem;
}
@media (min-width: 414px) {
  .edit-text-input {
    width: auto;
    padding-left: 1.75rem;
  }
}

